/**
 * Copyright (c) F5, Inc.
 *
 * This source code is licensed under the Apache License, Version 2.0 license found in the
 * LICENSE file in the root directory of this source tree.
 */

syntax = "proto3";
package f5.nginx.agent.api.grpc.instances;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nginx/agent/v3/api/grpc/instances";

message ConfigurationStatus {
    string instance_id = 1;
    string correlation_id = 2;
    google.protobuf.Timestamp timestamp = 3;
    Status status = 4;
    string message = 5;
}

enum Status {
    IN_PROGRESS = 0;
    SUCCESS = 1;
    FAILED = 2;
    ROLLBACK_IN_PROGRESS = 3;
    ROLLBACK_SUCCESS = 4;
    ROLLBACK_FAILED = 5;
}
